--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "socravuex",
   "version": "1.0.0",
   "description": "Vuex spike with http/WS server",
-  "author": "Alberto Gualis <gualis@.codingstones.com>",
+  "author": "Coding Stones <yeah@codingstones.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -10,12 +10,14 @@
     "build": "node build/build.js",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/e2e/specs",
+    "unit": "mocha --compilers js:babel-register --require babel-polyfill --recursive 'src/{,!(router)/**/}.js'"
   },
   "dependencies": {
     "foundation-sites": "^6.3.1",
     "vue": "^2.2.2",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.3.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "animate.css": "^3.5.2",
@@ -24,10 +26,14 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "bourbon": "^4.3.4",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
@@ -41,6 +47,7 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-mocha": "^4.9.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
@@ -59,6 +66,9 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
+    "sinon-stub-promise": "^4.0.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
