--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run e2e",
     "lint": "eslint --ext .js,.vue src test/e2e/specs",
-    "unit": "mocha --compilers js:babel-register --require babel-polyfill --recursive 'src/{,!(router)/**/}.js'"
+    "unit": "mocha --compilers js:babel-register --require babel-polyfill --recursive 'src/{,!(router)/**/*}.js'"
   },
   "dependencies": {
     "foundation-sites": "^6.3.1",
